# dashboard

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  _brand.yml  _quarto.yml  about.qmd  index.qmd  niu-dark.scss  niu-light.scss  package-lock.json  package.json  pyproject.toml
.github/workflows/: fetch_and_deploy.yml  nextjs.yml
app/: package-lock.json  package.json
backend/: package-lock.json  package.json
oss_dashboard/: __init__.py  constants.py  github_client.py  main.py  models.py  utils.py
oss_dashboard/data/: data_brainglobe.json  data_neuroinformatics-unit.json
oss_dashboard/fetchers/: __init__.py  discussions.py  downloads_pepy.py  fetch_parquet.py  issues.py  meta.py  organization.py  repository.py  utils.py
