[project]
name = "oss-dashboard"
authors = [{name = "Igor Tatarnikov", email= "igor.tatarnikov@gmail.com"}]
description = "GitHub organization metrics fetcher"
readme = "README.md"
requires-python = ">=3.11.0"
dynamic = ["version"]

dependencies = [
    "PyGithub>=2.1.1",
    "requests>=2.31.0",
    "duckdb>=0.9.2",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
]

license = {text = "BSD-3-Clause"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]



[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools-scm",
]

[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "setuptools-scm[toml]>=8",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["oss_dashboard*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "--cov=oss_dashboard"
filterwarnings = [
    "error",
]

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  ".yaml",
  "tox.ini",
  "tests/",
  "tests/test_unit/",
  "tests/test_integration/",
]

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
lint.select = [
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "I",   # isort
  # You can see what all the rules do here: https://docs.astral.sh/ruff/rules/
  # Some additional ruff rules that might be useful (uncomment to enable)
  #"UP",  # pyupgrade
  #"B",   # flake8 bugbear
  #"SIM", # flake8 simplify
  #"C90", # McCabe complexity
]
fix = true

[tool.ruff.format]
docstring-code-format = true # Also format code in docstrings (e.g. examples)

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{311,312,313}
isolated_build = True

[gh-actions]
python =
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
passenv =
    CI
    GITHUB_ACTIONS
extras =
    dev
commands =
    pytest -v --color=yes --cov=oss_dashboard --cov-report=xml
"""


[tool.codespell]
skip = '.git'
check-hidden = true
